# flux-screensavers

./: .gitignore  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
flux-ffi/: .gitignore  Cargo.toml  build.rs
flux-ffi/src/: flux.h  lib.rs
macos/: .gitignore  flux.h
macos/Flux/: .gitignore  Flux-Bridging-Header.h  FluxView.swift
macos/Flux.xcodeproj/: project.pbxproj
macos/Flux.xcodeproj/xcshareddata/xcschemes/: Flux.xcscheme  Runner.xcscheme
macos/Flux/Flux/: FluxView.swift  FluxView.txt
macos/Flux/Flux.xcodeproj/: project.pbxproj
macos/Flux/Flux.xcodeproj/project.xcworkspace/xcuserdata/Sander.xcuserdatad/: UserInterfaceState.xcuserstate
macos/Flux/Flux.xcodeproj/xcshareddata/xcschemes/: Flux.xcscheme  Runner.xcscheme
macos/Flux/Runner/: AppDelegate.swift
macos/Flux/Runner/Base.lproj/: MainMenu.xib
macos/Runner/: AppDelegate.swift  Runner.entitlements
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Runner/: AppDelegate.swift
macos/Runner/Runner/Base.lproj/: MainMenu.xib
windows/: Cargo.toml  build.rs  flux-screensaver-windows.exe.manifest
windows/installer/: setup.nsi
windows/src/: cli.rs  config.rs  gl_context.rs  main.rs  settings_window.rs  surface.rs  wallpaper.rs  winit_compat.rs
windows/src/platform/windows/: dpi_awareness.rs  dxgi_swapchain.rs  mod.rs  window.rs
