[package]
name = "flux-ffi"
description = "Foreign function interface for flux"
version = "0.0.1"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux-screensavers/"
publish = false
license-file = "../LICENSE"
edition = "2021"

[lib]
name = "flux"
crate-type = [ "staticlib", "cdylib" ]

[dependencies]
glow = "0.11.2"
serde_json = "1"

[dependencies.flux]
git = "https://github.com/sandydoo/flux"
tag = "v3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
