[package]
name = "flux-screensaver-windows"
version = "1.2.0"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux-screensavers/"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Flux"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "Flux"
FileDescription = "An ode to the macOS Drift screensaver"
LegalCopyright = "© 2022 Sander Melnikov"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
glow = "0.11.2"
log = "0.4"
raw-window-handle = "0.4"
glutin = "0.29.1"
simplelog = "^0.12.0"
winit = "0.27.5"
takeable = "0.2.1"

[dependencies.flux]
version = "4"
git = "https://github.com/sandydoo/flux"
tag = "v4.3.0"

[target.'cfg(windows)'.dependencies.windows]
version =  "0.44.0"
features = [
  "Win32_Foundation",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }

# [patch."https://github.com/sandydoo/flux"]
# flux = { version = "4", path = "../../flux/flux" }
