[package]
name = "flux-screensaver-windows"
version = "1.2.0"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux-screensavers/"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Flux"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "Flux"
FileDescription = "An ode to the macOS Drift screensaver"
LegalCopyright = "© 2022 Sander Melnikov"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
directories = "4"
glow = "0.11.2"
glutin = "0.29.1"
log = { version = "0.4", features = ["serde"] }
log-panics = { version = "2", features = ["with-backtrace"]}
raw-window-handle = "0.4"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"
takeable = "0.2.1"
winit = "0.28.1"

[dependencies.iced]
version = "0.7"
features = [
   # Use system fonts
  "default_system_font",

   # Use the OpenGL backend to reduce build size
  "glow"
]

[dependencies.iced_glow]
version = "0.6"

[dependencies.flux]
version = "4"
git = "https://github.com/sandydoo/flux"
branch = "main"

[target.'cfg(windows)'.dependencies.windows]
version =  "0.44.0"
features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
winres = "0.1.12"

[patch.crates-io]
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }

# [patch."https://github.com/sandydoo/flux"]
# flux = { version = "4", path = "../../flux/flux" }
