[package]
name = "flux-screensaver-windows"
version = "1.4.0"
description = "An open-source tribute to the macOS Drift screensaver"
authors = ["Sander Melnikov <hey@sandydoo.me"]
repository = "https://github.com/sandydoo/flux-screensavers/"
edition = "2021"
build = "build.rs"

[[bin]]
name = "Flux"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "Flux"
FileDescription = "An ode to the macOS Drift screensaver"
LegalCopyright = "© 2022 Sander Melnikov"

[profile.release]
codegen-units = 1 # Allow further optimisations by disabling parallel compilation
lto = true # Enable link-time optimisation
opt-level = 3
panic = "abort" # Strip expensive panic unwinding code
strip = true # Remove debug symbols

[dependencies]
directories = "5"
glow = "0.12.2"
log = { version = "0.4", features = ["serde"] }
log-panics = { version = "2", features = ["with-backtrace"]}
raw-window-handle = "0.5"
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "^0.12.0"

[dependencies.winit]
version = "0.28.3"
git = "https://github.com/sandydoo/winit"
branch = "flux"
default-features = false

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = [ "static-link", "raw-window-handle" ]

[dependencies.sdl2-sys]
version = "0.35.2"
features = [ "static-link" ]

[dependencies.glutin]
version = "0.30.6"
default-features = false
features = ["egl", "wgl"]

[dependencies.iced]
version = "0.9"
default-features = false
features = [
   # Use system fonts
  "default_system_font",

   # Use the OpenGL backend to reduce build size
  "glow"
]

[dependencies.flux]
version = "4"
git = "https://github.com/sandydoo/flux"
branch = "main"

[target.'cfg(windows)'.dependencies.windows]
version =  "^0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_OpenGL",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_HiDpi",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[patch.crates-io]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", branch = "master" }
sdl2-sys = { git = "https://github.com/Rust-SDL2/rust-sdl2", branch = "master" }
winres = { git = "https://github.com/sandydoo/winres", branch = "bugfix/fix-linking" }

# [patch."https://github.com/sandydoo/flux"]
# flux = { version = "4", path = "../../flux/flux" }
